--- a/fastly.toml
+++ b/fastly.toml
@@ -1,5 +1,12 @@
 manifest_version = 2
-name = "Default starter for JavaScript"
-description = "A basic starter kit that demonstrates routing, simple synthetic responses and overriding caching rules."
+name = "Geo-IP API at the edge"
+description = ""
 authors = ["<oss@fastly.com>"]
 language = "javascript"
+
+[local_server.backends.origin_0]
+  url = "https://httpbin.org"
+
+[setup.backends.origin_0]
+address = "httpbin.org"
+port = 443
